<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jibres</string>

    <string name="url_app">https://jeebres.ir/en/api/v1/app</string>
    <string name="url_salawat">https://jeebres.ir/en/api/v1/salawat</string>
    <string name="url_news">https://jeebres.ir/en/api/v1/posts/get?id=</string>
    <string name="url_del">https://jeebres.ir/en/api/v1/delneveshte</string>
    <string name="url_add_del">https://jeebres.ir/en/api/v1/delneveshte/add</string>
    <string name="url_del_like">https://jeebres.ir/en/api/v1/delneveshte/like</string>
    <string name="url_token">https://jeebres.ir/en/api/v1/token</string>
    <string name="url_user_add">https://jeebres.ir/en/api/v1/android/user/add</string>
    <string name="url_language">https://jeebres.ir/en/api/v1/language</string>
    <string name="url_notif">https://jeebres.ir/en/api/v1/notif</string>
    <string name="url_smile">https://jeebres.ir/enapi/v1/smile</string>

    <string name="errorNet_title_snackBar">Check your internet!</string>
    <string name="errorNet_button_snackBar">Try Again</string>

    <string name="change_language">Change Language</string>

    <string name="say_salawat">Say Salawat!</string>
    <string name="flag_salawat">You also partake in salawat</string>
    <string name="post">https://jeebres.ir/en/api/v1/posts</string>
    <string name="url_mission">https://jeebres.ir/en/api/v1/mission</string>
    <string name="url_vision">https://jeebres.ir/en/api/v1/vision</string>
    <string name="url_contact">https://jeebres.ir/en/api/v1/contact</string>
    <string name="url_about">https://jeebres.ir/en/api/v1/about</string>
    <string name="sex_female">female</string>
    <string name="sex_male">male</string>
    <string name="edt_name">Name optional</string>
    <string name="edt_mobile">Mobile optional</string>
    <string name="edt_writ_del">Wrote your heart sounds</string>
    <string name="send">Send</string>
    <string name="full_list">Full List</string>

    <string name="version">"Version "</string>
    <string name="send_delneveshteh">Send Self</string>
    <string name="tost_exit">Please click BACK again to exit</string>
    <string name="update_now">Update Now</string>
    <string name="smile">https://jeebres.ir/en/api/v1/smile</string>
    <string name="msg_token_fmt">msg_token_fmt</string>
    <string name="later">Exit</string>
    <string name="website">https://jeebres.ir/en</string>
    <string name="update_android">Your Android is too old!</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="start">Start</string>
    <string name="update">Update</string>
    <string name="salawat">Allahouma sali ala mohamed wa ali muhammad</string>
    <string name="language_is_selected">Language is Selected</string>
    <string name="your_phone">Your Phone!</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_number">Enter Number</string>
    <string name="desc_enter">A 4 digit OTP will be sent via SMS to verify yor mobile number!</string>
    <string name="enter_the_otp">Enter the OTP you received to</string>
    <string name="edit">EDIT</string>
    <string name="resend">Resend</string>

</resources>