<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
        android:layout_gravity="center"
        android:id="@+id/group_choices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tbgCheckedButton="@+id/choice_a">

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/choice_a"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:textSize="@dimen/_9sdp"
            android:text="@string/sex_female"/>

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:textSize="@dimen/_9sdp"
            android:layout_margin="@dimen/_10sdp"
            android:id="@+id/choice_b"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/sex_male"/>


    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/addel_edt_name"
            android:hint="@string/edt_name"
            android:maxLines="1"
            android:textSize="@dimen/_10sdp"
            android:nextFocusDown="@id/addel_edt_number"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textSize="@dimen/_10sdp"
            android:inputType="number"
            android:maxLines="1"
            android:id="@+id/addel_edt_number"
            android:nextFocusDown="@id/addel_edt_text"
            android:hint="@string/edt_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textSize="@dimen/_10sdp"
            android:maxLines="600"
            android:id="@+id/addel_edt_text"
            android:hint="@string/edt_writ_del"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>